# GAMES101

./: GAMES101.md  README.md
Assignment1/Code/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.hpp
Assignment2/: .clang-format
Assignment2/Code/: CMakeLists.txt  Triangle.cpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3/Code/: CMakeLists.txt  OBJ_Loader.h  Shader.hpp  Texture.hpp  Triangle.cpp  Triangle.hpp  global.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment4/code/: main.cpp
Assignment5/Code/: CMakeLists.txt  Light.hpp  Object.hpp  Renderer.cpp  Renderer.hpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
Assignment6/Assignment6/: AreaLight.hpp  BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  README.md  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  global.hpp  main.cpp
Assignment7/Assignment7/: BVH.cpp  BVH.hpp  Bounds3.hpp  CMakeLists.txt  Intersection.hpp  Light.hpp  Material.hpp  OBJ_Loader.hpp  Object.hpp  Ray.hpp  Renderer.cpp  Scene.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  Vector.hpp  binary.ppm  global.hpp  main.cpp
Assignment8/src/: CMakeLists.txt  application.cpp  main.cpp  rope.cpp
Note/: PathTracing.md
pa0/: CMakeLists.txt  main.cpp
